[tool.poetry]
name = "dimensionality_reduction"
version = "0.2.3"
description = "Dimensionality Reduction without Multicolinearity"
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
statsmodels = "^0.14.0"
ipykernel = "^6.24.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
